# automations

./: .gitignore  README.md  pyproject.toml  requirements.txt
automations/: analyze_cli.py  anthropic_provider.py  base_provider.py  doc_parser.py  doc_reader.py  docx_parser.py  docx_reader.py  epub_parser.py  epub_reader.py  gemini_provider.py  grammar_db.py  interactive-search.py  interactive_search_cli.py  korpus_document.py  linguistic_bits.py  meta_reader.py  morphological_analyzer.py  normalizer.py  pdf_parser.py  pdf_reader.py  read_epub_cli.py  sentencer.py  setup_logging.py  tokenizer.py  txt_parser.py  txt_reader.py  vert_io.py  verti_cli.py
corpus_build/: Dockerfile  README.md  cleanup-and-deploy.sh  corpus_build.py  deploy-cloudformation.sh  quick-deploy.sh  template.yaml
devops/: Dockerfile  README.md  cleanup-and-deploy.sh  deploy-cloudformation.sh  quick-deploy.sh  requirements.txt  test_local.py  verti_conversion.py
src/: analyze.py  anthropic_provider.py  base_provider.py  gemini_provider.py  grammar_db.py  interactive-search.py  morphological_analyzer.py
src/pos_tagger/: __init__.py  cli.py  grammar_db.py  interactive-search.py
src/providers/: __init__.py  anthropic_provider.py
tests/: test_linguistic_bits.py  test_normalizer.py  test_sentencer.py  test_tokenizer.py
verti_conversion/: Dockerfile  README.md  cleanup-and-deploy.sh  deploy-cloudformation.sh  quick-deploy.sh  template.yaml  test_local.py  verti_conversion.py
