[tool.poetry]
name = "belarusian-nlp"
version = "0.1.0"
description = "Інструменты для апрацоўкі беларускай мовы"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.0.0"
google-generativeai = "^0.3.0"
anthropic = "^0.5.0"
python-dotenv = "^1.0.0"
spacy = "^3.7.2"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0" 