[tool.poetry]
name = "belarusian-nlp"
version = "0.1.0"
description = "Інструменты для апрацоўкі беларускай мовы"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "automations"}]

[tool.poetry.scripts]
verti = "automations.verti_cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.66.0"
anthropic = "^0.49.0"
python-dotenv = "^1.0.0"
spacy = "^3.7.2"
lxml = "^5.3.1"
mypy = "^1.15.0"
google-genai = "^1.7.0"
pydantic = "^2.10.6"
ebooklib = "^0.18"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.black]
line-length = 200